Resolved some more findbugs warnings